<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="left"
                    android:text="@string/item_name"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvItemColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="left"
                    android:text="@string/item_color"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvItemCondition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="left"
                    android:text="@string/item_condition"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvTotalImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="left"
                    android:text="@string/images"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:text="@string/item_price"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvItemType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:text="@string/item_type"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvItemSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:text="@string/item_size"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/tvItemCreationDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:text="@string/date"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>



        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/squareColor"
            android:text="@string/view_details"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

