<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirebaseLogin.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                tools:ignore="ObsoleteLayoutParam">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/squareColor"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginTop="20dp"
                            android:padding="10dp"
                            android:src="@drawable/asset2tiktak"
                            android:tint="@color/white"
                            android:contentDescription="@string/none"
                            tools:ignore="UseAppTint" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:text="@string/register"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRegName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/artico_regular"
                                android:hint="Name"
                                android:inputType="text"
                                tools:ignore="HardcodedText,TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRegLastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/artico_regular"
                                android:hint="@string/last_name"
                                android:inputType="text"
                                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRegPhoneNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/artico_regular"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRegEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/artico_regular"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>



                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etRegPass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/artico_regular"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <CheckBox
                            android:id="@+id/checkBoxTerms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/artico_regular"
                            android:text="@string/i_have_read_and_i_accept_the_terms_of_use"
                            tools:ignore="VisualLintButtonSize" />

                        <Button
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/squareColor"
                            android:fontFamily="@font/artico_bold"
                            android:text="@string/Register"
                            android:textColor="@color/white"
                            tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />

                        <TextView
                            android:id="@+id/tvAlreadyHaveAAccount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/artico_bold"
                            android:gravity="center"
                            android:text="@string/already_have_an_account_log_in"
                            android:textSize="20sp" />
                    </LinearLayout>


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
